# diarium

./: .gitignore  .ocamlformat  Makefile  README.md  diarium.opam
.github/workflows/: test.yml
cli/: dune
lib/diarium_core/: clock.ml  clock.mli  dune  md5.ml  md5.mli  uuid.ml  uuid.mli
lib/diarium_unix/: dune  uuid.ml  uuid.mli
test/diarium_core_test/: clock_test.ml  diarium_core_test.ml  dune  md5_test.ml
